<resources>
  <string name="app_name">PUBG Victory</string>
  <string name="title_home">Home</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_search">Search</string>
  <string name="title_account">Account</string>
  <string name="title_room">Rooms</string>

  <string name="posts">Posts</string>
  <string name="followers">Followers</string>
  <string name="followings">Followings</string>
  <string name="additional_settings">Additional Settings</string>
  <string name="logout">Logout</string>

  <style name="warning_phone_number">No phone number found.</style>

  <string name="phone_not_found">Phone number not found.</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="name">Name</string>
  <string name="pubg_game_id">PUBG Game id</string>
  <string name="previous">Previous</string>
  <string name="next">Next</string>
  <string name="tournament_not_found">You have not participate any tournament yet.</string>
  <string name="your_qr_text">Your QR text</string>
  <string name="qr_code">QR Code</string>
  <string name="phone_number">Phone Number</string>
  <string name="email">Email Address</string>
  <string name="search_tournaments">Search tournaments.</string>
  <string name="search">Search</string>
  <string name="search_room">Search Rooms</string>
  <string name="no_notification_found">No notification found.</string>
  <string name="my_match">My Match</string>
  <string name="title_activity_participate">ParticipateActivity</string>
  <string name="add">Add</string>
  <string name="user_id">User ID</string>
  <string name="password">Password</string>
  <string name="room_id">Room ID</string>
  <string name="loading">loading</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact based
    on your message history
  </string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>

  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>

  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>

  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="multi_select_list_preference_default_value"/>

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>
</resources>
