<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:padding="@dimen/margin_16"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  tools:ignore="ContentDescription">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:text="@string/room_id"
      android:layout_gravity="center"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
      android:textColor="@color/primary_text"/>

    <TextView
      android:id="@+id/alertRoomID"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center"
      android:text="@string/loading"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
      android:textColor="@color/secondary_text"/>

    <ImageButton
      android:id="@+id/alertRoomIDCopyBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_gravity="center"
      android:background="#00FFFFFF"
      android:src="@drawable/ic_content_copy_black_24dp"
      android:tint="@color/secondary_text"/>
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_16">

    <TextView
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:text="@string/password"
      android:layout_gravity="center"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
      android:textColor="@color/primary_text"/>

    <TextView
      android:id="@+id/alertRoomPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center"
      android:text="@string/loading"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
      android:textColor="@color/secondary_text"/>

    <ImageButton
      android:id="@+id/alertRoomPasswordCopyBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_gravity="center"
      android:background="#00FFFFFF"
      android:src="@drawable/ic_content_copy_black_24dp"
      android:tint="@color/secondary_text"/>
  </LinearLayout>

</LinearLayout>

